--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,56 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>MyApp</title>
+  <meta charset="UTF-8">
+  <title>My App</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/">
 </head>
 <body>
-  <app-root></app-root>
+  <div>
+    <header>Punching</header>
+    <div class="input_data">
+      <subtitle>Support Area</subtitle>
+      <form action="/action_page.php">
+
+        <label for="SectionType">Section Type</label>
+        <select id="SectionType" name="SectionType">
+          <option value="Rectangular">Rectangular</option>
+          <option value="Circular">Circular</option>
+        </select>
+
+        <label for="Position">Position</label>
+        <select id="Position" name="Position">
+          <option value="Inner">Inner</option>
+          <option value="Edge">Edge</option>
+          <option value="Corner">Corner</option>
+        </select>
+
+        <label for="cx">Section width</label>
+        <input type="number" id="cx" name="cx" placeholder="cx">
+
+        <label for="cy">Section height</label>
+        <input type="number" id="cy" name="cy" placeholder="cy">
+
+      </form>
+    </div>
+    <div class="input_data">
+      <h3>Slab</h3>
+      <form action="/action_page.php">
+
+        <label for="Type">Type</label>
+        <select id="Type" name="Type">
+          <option value="Slab">Slab</option>
+          <option value="Foot">Foot</option>
+        </select>
+
+        <label for="height">height</label>
+        <input type="number" id="height" name="height" placeholder="hs">
+
+        <label for="cover">Nominal cover</label>
+        <input type="number" id="cover" name="cover" placeholder="cnom">
+
+      </form>
+    </div>
 </body>
 </html>
