--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <select id="Position" name="Position">
           <option value="Inner">Inner</option>
           <option value="Edge">Edge</option>
-          <option value="Corner">Corner</option>
+          <!-- <option value="Corner">Corner</option>  -->
         </select>
 
         <label for="cx">Section width</label>
